[package]
name = "grade"
version = "0.1.0"
authors = ["tst <steudtner.tom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.7.0"
features = ["v3_22"]

[dependencies.gio]
version = ""

[dependencies.pango]
version = ""