[package]
name = "grade"
version = "0.1.0"
authors = ["tst <steudtner.tom@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.gtk]
version = "0.7.0"
features = ["v3_22"]

[dev-dependencies.gio]
version = ""

[dev-dependencies.pango]
version = ""